added db access

--- a/Paginas/HTML/motorista.html
+++ b/Paginas/HTML/motorista.html
@@ -23,9 +23,9 @@
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select><br/><br/>
-                <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="button" value="Enviar" id="enviar" onClick="init();">Enviar</button>
                 
-                <!---->
+             
             </form>
         </fieldset>
         <script  src ="..\..\JavaScript\motorista.js" type="text/javascript"></script>
