--- a/Paginas/HTML/passageiro.html
+++ b/Paginas/HTML/passageiro.html
@@ -18,7 +18,7 @@
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select><br/><br/>
-                <button type="button" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="submti" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
             </form>
         </fieldset>
         <script src ="..\..\JavaScript\passageiro.js" type="text/javascript" ></script>
