Added working .HTML .PHP .JS for 'Corridas' object in the project

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <hmtl>
 <head></head>
 <body>
-<a href="http://www.danielk-teste.cf/Paginas/HTML/motorista.html">Motoristas</a><br/>
-<a href="http://www.danielk-teste.cf/Paginas/HTML/passageiro.html">Passageiros</a>    
+<a href="http://localhost/Projeto/Paginas/HTML/motorista.html">Motoristas</a><br/>
+<a href="http://localhost/Projeto/Paginas/HTML/passageiro.html">Passageiros</a><br/>  
+<a href="http://localhost/Projeto/Paginas/HTML/corrida.html">Corridas</a>    
     
 </body>
 
