--- a/Paginas/HTML/motorista.html
+++ b/Paginas/HTML/motorista.html
@@ -20,6 +20,7 @@
                     </select><br/><br/>
                 <label for="sexo">Sexo</label>
                     <select id="sexo">
+                        <option>Escolha um genero</option>
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select><br/><br/>
