--- a/Paginas/HTML/corrida.html
+++ b/Paginas/HTML/corrida.html
@@ -6,15 +6,17 @@
         <fieldset>
             <form class="Form" method="GET">
                 <label for="vl_corrida">Valor da corrida</label>
-                    <input type="number" id="vl-corrida"/><br/><br/>
+                    <input type="float" id="vl-corrida"/><br/><br/>
                 <label for="nome-motorista">Motorista disponível</label>
-                    <select id="nome-motorista">
+                    <select id="options">
                         <option>Escolha um motorista</option>
                     </select><br/><br/>
                 <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
             </form>
         </fieldset>
         <script src ="..\..\JavaScript\corrida.js" type="text/javascript" ></script>
+        <script  src="../../lib/jquery-1.11.1.js" type = "text/javascript"></script>
+        <script  src="../../JavaScript/uicontroller.js" type="text/javascript"></script> 
      
     </body>
 </html>
