Back-End Finished, this commit changed Corrida and Passageiro

--- a/Paginas/HTML/corrida.html
+++ b/Paginas/HTML/corrida.html
@@ -12,9 +12,13 @@
                         <option>Escolha um motorista</option>
                     </select><br/><br/>
                 <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="submit" value="Listar" id="listar" onclick="return list();">Consultar Corridas</button>
             </form>
+            <div class="tabela-corridas">
+                
+            </div>
         </fieldset>
-        <script src ="..\..\JavaScript\corrida.js" type="text/javascript" ></script>
+        <script src ="../../JavaScript/corrida.js" type="text/javascript" ></script>
         <script  src="../../lib/jquery-1.11.1.js" type = "text/javascript"></script>
         <script  src="../../JavaScript/uicontroller.js" type="text/javascript"></script> 
      
