--- a/Paginas/HTML/passageiro.html
+++ b/Paginas/HTML/passageiro.html
@@ -7,7 +7,7 @@
     <body>
         <fieldset>
             <form class="Form" method="GET">
-                <label class = "label" for="nome">Nome</label><!-- Retirar o class label se o css funcionar escolhendo uma classe -->
+                <label class = "label" for="nome">Nome</label>
                     <input type = "text" id="nome"/><br/><br/>
                 <label for="data">Data de nascimento</label>
                     <input type = "date" id="dt_nascimento"/><br/><br/>
@@ -26,10 +26,15 @@
                         <option value="F">Feminino</option>
                     </select><br/><br/>
                 <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="submit" value="Listar" id="listar" onclick="return list();">Consultar Passageiros</button>
             </form>
+            <div class="tabela-passageiros">
+            
+            </div>
         </fieldset>
         <script src ="../../JavaScript/passageiro.js" type="text/javascript" ></script>
         <script  src="../../lib/jquery-1.11.1.js" type = "text/javascript"></script>
         <script  src="../../JavaScript/uicontroller.js" type="text/javascript"></script> 
+      
     </body>
 </html>
