Back-End and web server finished

--- a/Paginas/HTML/corrida.html
+++ b/Paginas/HTML/corrida.html
@@ -11,8 +11,9 @@
                     <select id="options">
                         <option>Escolha um motorista</option>
                     </select><br/><br/>
-                <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="submit" value="Enviar" id="enviar" onclick="return init();">Registrar</button>
                 <button type="submit" value="Listar" id="listar" onclick="return list();">Consultar Corridas</button>
+                <button type="submit" value="Home" onclick="return home();">Home</button>
             </form>
             <div class="tabela-corridas">
                 
