--- a/Paginas/HTML/motorista.html
+++ b/Paginas/HTML/motorista.html
@@ -24,9 +24,10 @@
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select><br/><br/>
-                <button type="submit" value="Enviar" id="enviar" onClick="return init();">Enviar</button>
+                <button type="submit" value="Enviar" id="enviar" onClick="return init();">Registrar</button>
                 <button type="submit" value="Listar" id="listar" onClick="return list();">Listar Motoristas</button>
                 <button type="submit" value="Update" id ="update" onClick="return updateM();">Atualizar motorista</button>  
+                <button type="submit" value="Home" onclick="return home();">Home</button>
             </form>
             <div class="tabela-motoristas" >
                     
