--- a/Paginas/HTML/passageiro.html
+++ b/Paginas/HTML/passageiro.html
@@ -25,8 +25,9 @@
                         <option value="M">Masculino</option>
                         <option value="F">Feminino</option>
                     </select><br/><br/>
-                <button type="submit" value="Enviar" id="enviar" onclick="return init();">Enviar</button>
+                <button type="submit" value="Enviar" id="enviar" onclick="return init();">Registrar</button>
                 <button type="submit" value="Listar" id="listar" onclick="return list();">Consultar Passageiros</button>
+                <button type="submit" value="Home" onclick="return home();">Home</button>
             </form>
             <div class="tabela-passageiros">
             
