--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <hmtl>
 <head></head>
 <body>
-<a href="http://localhost/Projeto/Paginas/HTML/motorista.html">Motoristas</a><br/>
-<a href="http://localhost/Projeto/Paginas/HTML/passageiro.html">Passageiros</a><br/>  
-<a href="http://localhost/Projeto/Paginas/HTML/corrida.html">Corridas</a>    
+<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html">Motoristas</a><br/>
+<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html">Passageiros</a><br/>  
+<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html">Corridas</a>    
     
 </body>
 
 </hmtl>
+
