Started front-end project, editing index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE HTML>
 <hmtl>
-<head></head>
+<head>
+    <link href="Css/bootstrap.css" rel="stylesheet">
+    <link href="Css/style.css" rel="stylesheet">
+</head>
 <body>
-<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html">Motoristas</a><br/>
-<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html">Passageiros</a><br/>  
-<a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html">Corridas</a>    
     
+    <div class="header">
+        <h1>Speeze</h1>
+    </div>
+    <div class="links">
+        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html';"id="motorista">
+            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Motoristas</a><br/>
+        </div>
+        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html';" id="passageiro">
+            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html" id="link-p" class="link">Passageiros</a><br/>  
+        </div>
+        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html';" id="corrida">
+            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html" class="link">Corridas</a> 
+        </div>
+    </div>
+    <div class="footer">
+          <p>Corridas Compartilhadas</p>
+    </div>
 </body>
 
 </hmtl>
