Testing drop-down list

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <h1>Speeze</h1>
     </div>
     <div class="links">
-        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html';"id="motorista">
-            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Motoristas</a><br/>
+        <div  class="dropdown" onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html';"id="motorista">
+            <button class="dropbtn">Motorista<span class="caret"></span></button>
+            <div class="dropdown-content">
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Registrar</a><br/>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Consultar</a><br/>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Atualizar</a><br/>
+            </div>
         </div>
         <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html';" id="passageiro">
             <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html" id="link-p" class="link">Passageiros</a><br/>  
