Adding and testing drop-down options in index.html

--- a/index.html
+++ b/index.html
@@ -11,20 +11,31 @@
     </div>
     <div class="links">
         <div  class="dropdown" onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html';"id="motorista">
-            <button class="dropbtn">Motorista<span class="caret"></span></button>
-            <div class="dropdown-content">
-                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Registrar</a><br/>
-                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Consultar</a><br/>
-                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Atualizar</a><br/>
+            <img id="icon-m" src="Css/icons/Motoristas.png" alt="Motoristas" height=85px>
+            <h2 class="info-titulo" id="i-motoristas">Motorista</h2>
+            <div class="dropdown-content" id="d-motorista">
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Registrar</a>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Consultar</a>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/motorista.html" id="link-m" class="link">Atualizar</a>
             </div>
         </div>
-        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html';" id="passageiro">
-            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html" id="link-p" class="link">Passageiros</a><br/>  
+        <div class="dropdown" onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html';" id="passageiro">
+            <img id="icon-p" src="Css/icons/Passageiros.png" alt="Passageiros" height=85px>
+            <h2 class="info-titulo" id="i-passageiros">Passageiro</h2>
+            <div class="dropdown-content" id="d-passageiro">
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.html" id="link-p" class="link">Registrar</a>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/passageiro.htmll" id="link-p" class="link">Consultar</a>
+            </div>
         </div>
-        <div onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html';" id="corrida">
-            <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html" class="link">Corridas</a> 
+        <div class="dropdown" onClick="location.href='https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.htm';" id="corrida">
+            <img id="icon-c" src="Css/icons/Corridas.png" alt="Corridas" height=85px>
+            <h2 class="info-titulo" id="i-corridas">Corridas</h2>
+            <div class="dropdown-content" id="d-corrida">
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html" id="link-c" class="link">Registrar</a>
+                <a href="https://whispering-eyrie-32116.herokuapp.com/Paginas/HTML/corrida.html" id="link-c" class="link">Consultar</a>
+            </div>
         </div>
-    </div>
+    </div>       
     <div class="footer">
           <p>Corridas Compartilhadas</p>
     </div>
